# triton-kernels

./: README.md  pyproject.toml
benchmarks/: bench_add.py
tests/: test_add.py
triton_kernels/: __init__.py  config.py
triton_kernels/ops/: add.py
