[project]
name = "triton-kernels"
version = "0.1.0"
description = "Triton kernels for deep learning"
readme = "README.md"
authors = [
    { name = "milasd" }
]
requires-python = ">=3.12"
dependencies = [
    "triton>=3.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
